Update .gitignore and refactor logging parameters in TypeScript files
- Add log files and report source directory to .gitignore
- Clean up logging parameter and type definitions in deep-research.ts
- Restore log statement in mcp-server.ts and remove commented debug logs

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ bun.lockb
 
 # Tasks
 tasks.md
+
+# Log files
+deep-research-mcp.log
+threads-mcp-server.log
+
+# Report source files
+report_source/
