feat: Add flexible model selection and list-models tool for MCP
- Add list-models tool to show available AI models with intelligence ratings
- Enhance deep-research tool with flexible model parameter support
- Support all current and future models via provider:model format
- Auto-select best available model when no model specified
- Export getAvailableProviders for MCP server access
- Add model logging for better debugging

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "serve": "node --env-file=.env.local dist/mcp-server.js",
     "serve:http": "node --env-file=.env.local dist/http-server.js",
     "docker": "tsx src/run.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:integration": "node test-research-integration.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,10 +26,11 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/express": "^5.0.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.13.0",
+    "@types/node": "^22.18.3",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.1",
