- Updated environment schema in config.ts to include optional OPENAI_ENDPOINT

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=  # Your OpenAI API key
+OPENAI_ENDPOINT= # Optional: Custom OpenAI-compatible endpoint 
 FIRECRAWL_KEY=   # Your Firecrawl API key (not needed if using local instance)
 
 # Firecrawl Configuration
